🔧fix: Resolve overflow-x issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,7 @@
 body {
   background: #33334F;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 a {
